Fixes inefficient use of Boolean constructor discovered by FindBugs.